[fix] : bom 조회,삭제 부분 제외 Todo 해결 완료